use cheerio js for scraping html. add cache feature
