# app/Controllers/Http/SearchingPagesController.js
@@ -2,50 +2,44 @@
 
 const BackgroundWorkerService = require('../../Services/BackgroundWorkerService')
 const { tagsWithInnerText } = require('../../Utils/helper')
+const ResponseMessengerService = require('../../Services/ResponseMessengerService')
 
 class SearchingPagesController {
 
   async word({ request, response }) {
     const searchWord = request._qs.word
-    let empty = request._qs.empty || false
-    let returnMessage;
-
-    if (empty) {
-      empty = true
-      returnMessage = `Searching pages which haven't word '${searchWord}'...`
-    } else {
-      returnMessage = `Searching pages which have word '${searchWord}'...`
-    }
-
-    BackgroundWorkerService.searchWordInSiteMap({ searchWord, empty })
-    response.json({'message': returnMessage})
+    const selector = request._qs.selector || 'html'
+    const empty = !!request._qs.empty
+    const options = { selector, searchWord, empty }
+    const responseMessage = ResponseMessengerService.getWordMessage(options)
+    BackgroundWorkerService.searchWordInComponent(options)
+    console.log(responseMessage)
+    response.json({'message': responseMessage})
   }
 
   async info({ request, response }) {
+    const responseMessage = ResponseMessengerService.getPageInfoMessage()
     BackgroundWorkerService.getPageInfo()
-    response.json({'message': `Crawling pages, getting info...`})
+    console.log(responseMessage)
+    response.json({'message': responseMessage})
   }
 
   async empty({ request, response }) {
+    const responseMessage = ResponseMessengerService.getEmptyMessage()
     BackgroundWorkerService.searchEmptyElements({ tagsWithInnerText })
-    response.json({'message': `Searching empty elements...`})
+    console.log(responseMessage)
+    response.json({'message': responseMessage})
   }
 
   async outerInner({ request, response }) {
     const outerSelector = request._qs.outerSelector
     const innerSelector = request._qs.innerSelector
-    let empty = request._qs.empty || false
-    let returnMessage;
-
-    if (empty) {
-      empty = true
-      returnMessage = `Searching pages which have outer elements ${outerSelector} which haven't inner elements ${innerSelector}...`
-    } else {
-      returnMessage = `Searching pages which have outer elements ${outerSelector} which have inner elements ${innerSelector}...`
-    }
-
-    BackgroundWorkerService.searchInnerElementInOuter({ outerSelector, innerSelector, empty } )
-    response.json({'message': returnMessage})
+    const empty = !!request._qs.empty
+    const options = { outerSelector, innerSelector, empty }
+    const responseMessage = ResponseMessengerService.getOuterInnerMessage(options)
+    BackgroundWorkerService.searchInnerElementInOuter(options)
+    console.log(responseMessage);
+    response.json({'message': responseMessage})
   }
 
 }
